<resources>
    <string name="app_name">Solipaire</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="solipaire">Solipaire</string>
    <string name="new_game">New Game</string>
    <string name="stats">Statistics</string>
    <string name="how_to_play">How To Play</string>
    <string name="settings">Settings</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="PasswordColon">Password:</string>
    <string name="User_NameColon">User Name:</string>
    <string name="solipaire_logo">SOLIPAIRE LOGO</string>
    <string name="solipaire_instructions">Solipaire is a competitive form of Solitaire that is played by 2 people. At the start a traditional Solitaire board will be created and each player will be dealt 7 cards from the draw pile. On a turn a player can either play a card from their hand onto a stack, move cards from one stack to another, remove a card from a stack and place it in the discard pile for that suit, draw a card, or do nothing. Play swaps back and forth between players and the player to empty their hand first wins. If neither player can empty their hand the player with the lowest points wins. Points are totaled by the sum of point values for each card in your hand.</string>
    <string name="change_card_theme">Change Card Theme</string>
    <string name="change_username">Change Username</string>
    <string name="change_table_color">Change Table Color</string>
    <string name="blue">Blue</string>
    <string name="white">White</string>
    <string name="delete_user">Delete User</string>
    <string name="red_default">Red (default)</string>
    <string name="reset_game">Delete All Users</string>
    <string name="reset_statistics">Reset Statistics</string>
    <string name="music">Music</string>
    <string name="warning_the_following_options_cannot_be_undone">WARNING: The following actions cannot be undone.</string>
    <string name="return_text">Return</string>
    <string name="green_default">Green (default)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistics">Statistics</string>
    <string name="games_won">Games Won:</string>
    <string name="games_played">Games Played:</string>
    <string name="total_points">Total Points:</string>
    <string name="player_2">Player 2:</string>
    <string name="win_loss_ratio">Win/Loss Ratio:</string>
    <string name="player_1">Player 1:</string>
    <string name="facebook_app_id">535723011333395</string>
    <string name="facebook_client_token">273cfd0cd89d1accdc0bee795252a0f0</string>
    <string name="green">Green</string>
    <string name="returnString">Return</string>
    <string name="re_enter_password">Re-Enter Password</string>
</resources>