<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StartScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/LogInTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/kameron_bold"
                    android:text="@string/solipaire"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/red_255"
                    android:textSize="60sp" />

                <Button
                    android:id="@+id/NewGameButton"
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="32dp"

                    android:layout_marginEnd="29dp"
                    android:background="@color/red_255"

                    android:text="@string/new_game"
                    android:textColor="#000000"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/StatsButton"
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="44dp"

                    android:layout_marginEnd="29dp"
                    android:background="@color/red_255"

                    android:text="@string/stats"
                    android:textColor="#000000"
                    android:textSize="48sp" />
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Welcome!"
                    android:textAlignment="center"
                    android:textSize="48dp" />

                <Button
                    android:id="@+id/RulesButton"
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:layout_marginStart="29dp"

                    android:layout_marginTop="44dp"
                    android:layout_marginEnd="29dp"
                    android:background="@color/red_255"

                    android:text="@string/how_to_play"
                    android:textColor="#000000"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/SettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="44dp"

                    android:layout_marginEnd="29dp"
                    android:background="@color/red_255"

                    android:text="@string/settings"
                    android:textColor="#000000"
                    android:textSize="48sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>