<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartScreenActivity">

    <TextView
        android:id="@+id/titleCard"
        android:layout_width="361dp"
        android:layout_height="88dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/kameron_bold"
        android:text="@string/solipaire"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF0000"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="226dp"
        android:contentDescription="@string/app_name"
        android:layout_height="201dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="24dp"
        android:src="@mipmap/Solipaire_logo"
        app:layout_constraintBottom_toTopOf="@+id/LogInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCard" />

    <Button
        android:id="@+id/LogInButton"
        android:layout_width="354dp"
        android:layout_height="86dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="18dp"
        android:background="#FF0000"
        android:backgroundTint="#FF0000"
        android:text="@string/log_in"

        android:textColor="#000000"
        android:textSize="48sp"
        app:iconTint="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/SignUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:strokeColor="#FF0000" />

    <Button
        android:id="@+id/SignUpButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="354dp"
        android:layout_height="86dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="26dp"
        android:background="#FF0000"
        android:backgroundTint="#FF0000"
        android:text="@string/create_account"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogInButton"
        app:strokeColor="#FF0000" />

</androidx.constraintlayout.widget.ConstraintLayout>