<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="#FFFFFF"
    tools:context=".activity.StartScreenActivity">

    <ScrollView
        android:layout_width="381dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/LogInTitle"
                android:layout_width="361dp"
                android:layout_height="88dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/kameron_bold"
                android:text="@string/solipaire"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/red_255"
                android:textSize="60sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="217dp"
                android:adjustViewBounds="false"
                android:src="@drawable/solipairelogo" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/SignUpButton"
            android:layout_width="354dp"
            android:layout_height="86dp"
            android:layout_marginTop="60dp"
            android:background="@color/red_255"

            android:text="@string/create_account"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/LogInButton"
            android:layout_width="354dp"
            android:layout_height="86dp"
            android:layout_marginTop="60dp"
            android:background="@color/red_255"
            android:text="@string/log_in"
            android:textColor="#000000"
            android:textSize="48sp" />
    </LinearLayout>

</LinearLayout>